# assetto-corsa-aws-server

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ac/: __init__.py  __main__.py  awsio.py  cli.py  content.py  remote.py  render.py  state.py  wizard.py
docs/: PLAYERS.md  TECHNICAL.md
examples/: server.example.yml
scripts/: check-terraform.ps1  smoke-test.ps1  smoke-test.sh  test.ps1
server-config/: README.md
terraform/: main.tf  network.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf  versions.tf
tests/: conftest.py  test_content.py  test_remote.py  test_render.py  test_sync_aws.py
