[project]
name = "ac-server-ctl"
version = "0.1.0"
description = "Spin up, sync content to, and control an Assetto Corsa server on AWS."
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34",
    "PyYAML>=6.0",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
ac = "ac.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ac"]
